feat(styles): increase font in entire page

--- a/src/App.scss
+++ b/src/App.scss
@@ -210,3 +210,8 @@ pre[class*="language-"] {
   overflow: hidden !important;
   white-space: pre-wrap;
 }
+
+body {
+  // zoom: 150% !important;
+  font-size: 3rem;
+}
