--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,21 @@
 gtml,
-#app > div > div.rewrite-editor > div.Editor > section > div > div.monaco-editor.no-user-select.mac.showUnused.showDeprecated.vs > div.overflow-guard > div.monaco-scrollable-element.editor-scrollable.vs.mac > div.lines-content.monaco-editor-background > div.view-lines.monaco-mouse-cursor-text,
+#app
+  > div
+  > div.rewrite-editor
+  > div.Editor
+  > section
+  > div
+  > div.monaco-editor.no-user-select.mac.showUnused.showDeprecated.vs
+  > div.overflow-guard
+  > div.monaco-scrollable-element.editor-scrollable.vs.mac
+  > div.lines-content.monaco-editor-background
+  > div.view-lines.monaco-mouse-cursor-text,
 body {
   margin: 0;
   padding: 0;
 
   font-family: "JuliaMono Nerd Font Mono", sans-serif !important;
-  font-size: 14px !important;
+  font-size: 14px;
   line-height: 2 !important;
   color: #333;
 }
@@ -449,4 +459,3 @@ html {
   display: flex;
   flex-direction: row;
 }
-
